--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Mosque Website</title>
+<title>Masjid Farhat Habeeb</title>
 <script src="https://cdn.tailwindcss.com"></script>
 <script defer src="main.js"></script>
 </head>
 <body class="bg-gray-100 text-gray-800">
 
 <header class="bg-green-800 text-white text-center p-6 text-3xl font-bold">
-Masjid Website
+Masjid Farhat Habeeb
 </header>
 
 <section class="p-6">
