--- a/index.html
+++ b/index.html
@@ -1,77 +1,53 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Masjid Farhat Habeeb</title>
+<title>Masjid Al Noor</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <script src="https://cdn.tailwindcss.com"></script>
+<link href="https://fonts.googleapis.com/css2?family=Amiri&display=swap" rel="stylesheet">
 <script defer src="main.js"></script>
+<style>.quran{font-family:Amiri}.gold{color:#d4af37}</style>
 </head>
-<body class="bg-gray-100 text-gray-800">
-
-<header class="bg-green-800 text-white text-center p-6 text-3xl font-bold">
-Masjid Farhat Habeeb
+<body class="bg-white">
+<header class="bg-green-900 text-white p-6 flex gap-4">
+<img src="assets/images/logo.png" class="h-16 w-16 border-2 border-yellow-400 rounded-full">
+<div><h1 id="mosqueName" class="text-3xl gold"></h1><p id="address"></p></div>
 </header>
 
-<section class="p-6">
-<h2 class="text-2xl text-green-700 font-bold text-center mb-4">Daily Prayer Times</h2>
-<div class="max-w-md mx-auto bg-white p-4 rounded shadow space-y-2">
-<p>Fajr: <span id="fajr"></span></p>
-<p>Sunrise: <span id="sunrise"></span></p>
-<p>Dhuhr: <span id="dhuhr"></span></p>
-<p>Asr: <span id="asr"></span></p>
-<p>Maghrib: <span id="maghrib"></span></p>
-<p>Sunset: <span id="sunset"></span></p>
-<p>Isha: <span id="isha"></span></p>
+<section class="p-6 text-center">
+<h2 class="text-2xl font-bold text-green-800">Prayer & Adhan Times</h2>
+<div id="prayers" class="grid grid-cols-2 md:grid-cols-3 gap-4 mt-4"></div>
+<p>Sunrise: <span id="sunrise"></span> | Sunset: <span id="sunset"></span></p>
+<p>Hijri Date: <span id="hijri"></span></p>
+</section>
+
+<section class="p-6 bg-gray-50 text-center">
+<h2 class="text-2xl font-bold text-green-800">Extra Prayers</h2>
+<div id="extra" class="grid grid-cols-2 md:grid-cols-3 gap-3 mt-3"></div>
+</section>
+
+<section class="p-6 text-center">
+<h2 class="text-2xl font-bold text-green-800">Ramadan Countdown</h2>
+<p id="countdown" class="gold text-xl"></p>
+</section>
+
+<section class="p-6 bg-gray-50 text-center">
+<h2 class="text-2xl font-bold text-green-800">Verse of the Day</h2>
+<p id="verseAr" class="quran text-3xl gold mt-4"></p>
+<p id="verseEn" class="italic mt-2"></p>
+</section>
+
+<section class="p-6 text-center">
+<h2 class="text-2xl font-bold text-green-800">Donate</h2>
+<div class="grid grid-cols-1 md:grid-cols-3 gap-4 mt-4">
+<div><img src="assets/images/zelle.png"><p>Zelle</p></div>
+<div><img src="assets/images/gpay.png"><p>Google Pay</p></div>
+<div><img src="assets/images/card.png"><p>Credit / Debit</p></div>
 </div>
 </section>
 
-<section class="p-6">
-<h2 class="text-2xl text-green-700 font-bold text-center mb-4">Weekly Timetable</h2>
-<table class="table-auto mx-auto bg-white rounded shadow" id="weeklyTable">
-<thead class="bg-green-700 text-white">
-<tr>
-<th class="p-2">Date</th>
-<th class="p-2">Fajr</th>
-<th class="p-2">Sunrise</th>
-<th class="p-2">Dhuhr</th>
-<th class="p-2">Asr</th>
-<th class="p-2">Maghrib</th>
-<th class="p-2">Sunset</th>
-<th class="p-2">Isha</th>
-</tr>
-</thead>
-<tbody></tbody>
-</table>
-</section>
-
-<section class="p-6">
-<h2 class="text-2xl text-green-700 font-bold text-center mb-4">Monthly Timetable</h2>
-<table class="table-auto mx-auto bg-white rounded shadow" id="monthlyTable">
-<thead class="bg-green-700 text-white">
-<tr>
-<th class="p-2">Date</th>
-<th class="p-2">Fajr</th>
-<th class="p-2">Sunrise</th>
-<th class="p-2">Dhuhr</th>
-<th class="p-2">Asr</th>
-<th class="p-2">Maghrib</th>
-<th class="p-2">Sunset</th>
-<th class="p-2">Isha</th>
-</tr>
-</thead>
-<tbody></tbody>
-</table>
-</section>
-
-<section class="p-6">
-<h2 class="text-2xl text-green-700 font-bold text-center mb-4">Events & Announcements</h2>
-<div id="events" class="max-w-xl mx-auto bg-white p-4 rounded shadow space-y-2"></div>
-</section>
-
-<section class="p-6">
-<h2 class="text-2xl text-green-700 font-bold text-center mb-4">Jumu’ah Khutbah Schedule</h2>
-<div id="jumuah" class="max-w-xl mx-auto bg-white p-4 rounded shadow space-y-2"></div>
-</section>
-
+<footer class="bg-green-900 text-white text-center p-4">© 2025 Masjid Al Noor</footer>
 </body>
 </html>
