--- a/index.html
+++ b/index.html
@@ -48,6 +48,6 @@
 </div>
 </section>
 
-<footer class="bg-green-900 text-white text-center p-4">© 2025 Masjid Al Noor</footer>
+<footer class="bg-green-900 text-white text-center p-4">© 2025 Masjid Farhat Habeeb</footer>
 </body>
 </html>
